Support approve application have review description
